--- a/index.html
+++ b/index.html
@@ -32,5 +32,14 @@
     </div>
     <div class="horizontal"></div>
     <div class="vertical"></div>
+
+  <div class="main__second">
+    <div class="white__second">
+      <div class="black__second">
+      </div>
+    </div>
+  </div>
+  <div class="horizontal__second"></div>
+  <div class="vertical__second"></div>
 </body>
 </html>
