--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="description" content="My personal website containing useful information about me">
     <meta name="keywords" content="HTML, resume, website, KPI, FICT">  
+    <link rel="stylesheet" href="style.css">
     <title>Мінаєв В. О. ІА-93</title>
 </head>
 <body>
-    <h2>Мінаєв Владислав Олександрович.</h2>
-    <p>Місце та дата народження: 15 березня 2002р. м. Краматорськ, Донецька обл.</p>
+    <h2 >Мінаєв Владислав Олександрович.</h2>
+    <p >Місце та дата народження: 15 березня 2002р. м. Краматорськ, Донецька обл.</p>
     <p>Освіта: ЗОШ №3 м. Краматорськ</p>
     <p style="padding-left: 55px;">Національний технічний університет України «Київський політехнічний інститут імені Ігоря Сікорського»</p>
-    <p>Хоббі:</p>
-    <ul>
+    <p id="title">Хоббі:</p>
+    <ul class="place">
         <li>Волейбол</li>
         <li>Водіння автомобіля</li>
         <li>Комп'ютерні ігри</li>
@@ -26,18 +27,20 @@
         <li>"Мальчишник в Лас-Вегасе"</li>
     </ol>
     <p>Рим — столиця Італії з 1870, адміністративний центр провінції Рим та області Лаціо. 
-        Населення понад 2,76 млн осіб, це найбільша за територією і кількістю жителів комуна країни.
-         Міська агломерація нараховує до 3,7 млн[1] жителів і є другою за величиною в Італії після Мілана.
+          Населення понад 2,76 млн осіб, це найбільша за територією і кількістю жителів комуна країни.
+          Міська агломерація нараховує до 3,7 млн[1] жителів і є другою за величиною в Італії після Мілана.
           Рим розташований в центральній частині Апеннінського півострова на річці Тибр, поблизу узбережжя Тірренського моря..<br>
-        Одне з найдавніших міст світу, столиця Стародавнього Риму (за переказом із 753 до н. е.).
-         Інші назви: «вічне місто», «місто на семи пагорбах» — спочатку поселення було на пагорбі Палатин, згодом були заселені сусідні пагорби — Капітолій і Квіринал.
+          Одне з найдавніших міст світу, столиця Стародавнього Риму (за переказом із 753 до н. е.).
+          Інші назви: «вічне місто», «місто на семи пагорбах» — спочатку поселення було на пагорбі Палатин, згодом були заселені сусідні пагорби — Капітолій і Квіринал.
           Дещо пізніше поселення з'явилися на інших 4 пагорбах: Целій, Авентін, Есквілін і Вімінал.<br>
-       
     </p>
-    <p>
-        <a href="https://uk.wikipedia.org/wiki/%D0%A0%D0%B8%D0%BC"><img src="assets/Rome.jpg" width="750" 
-        height="400" alt="Рим"></a>
-    </p>
-
+    <div class="images">
+        <a href="https://uk.wikipedia.org/wiki/%D0%9C%D0%B0%D0%B4%D1%80%D0%B8%D0%B4"><img class="default-size show" src="assets/Rome.jpg" alt="Мадрид" id="city"></a>
+    </div>
+    <button  class="add">Додати</button>
+    <button  class="remove">Видалити</button>
+    <button  class="increase">Збільшити</button>
+    <button  class="decrease">Зменшити</button>
+    <script src="index.js"></script>
 </body>
 </html>
